Sub Menu Actividades
1.Realizo nuevos cambios al sub menú de actividades.
2.Agrego nuevas actividades y contenido a la multimedia.
3.Tambien agrego contador de visitas.

--- a/ActividadesGitHub.html
+++ b/ActividadesGitHub.html
@@ -68,10 +68,43 @@
                             Multimedia
                         </a>
                     </li>
-                    <li>
-                        <a href="Actividades.html">
+                        <li>
+                        <a href="">
                             Actividades
                         </a>
+                        <ul>
+                            <li>
+                                <a href="ActividadesCss3.html">
+                                    Actividad 1
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5.html">
+                                    Actividad 2
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5Num2.html">
+                                    Actividad 3
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="ActividadesGit.html">
+                                    Actividad 4
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHub.html">
+                                    Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="Autores.html">
@@ -95,7 +128,7 @@
                     <div class="col-lg-12">
                         <!--Pregunta 1 GITHUB-->
                         <fieldset>
-                            <legend>Cuales son los tipos para clonar un repositorio</legend>
+                            <legend>¿Cuáles son los tipos para clonar un repositorio?</legend>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
                                 <label for="Pregunta1">HTTP / HTTPS</label>
@@ -113,7 +146,7 @@
 
                         <!--Pregunta 2 GITHUB-->
                         <fieldset>
-                            <legend>Se puede compartir un repositorio para que otras personas puedan editarlo</legend>
+                            <legend>¿Se puede compartir un repositorio para que otras personas puedan editarlo?</legend>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Correcto">
                                 <label for="Pregunta2">Si</label>
@@ -128,7 +161,7 @@
                         <!--Pregunta 3 GITHUB-->
                         <fieldset>
                             <legend>
-                                   Es un hosting online para nuestros repositorios
+                                   ¿Es un hosting online para nuestros repositorios?
                             </legend>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Correcto">
@@ -139,6 +172,46 @@
                                 <label for="Pregunta3">No</label>
                             </div>
                             <div class="RespuestaPregunta3"></div>
+                        </fieldset>
+                        <!--Pregunta 4 GITHUB-->
+                        <fieldset>
+                            <legend>
+                                   ¿Que es GitHub?
+                            </legend>
+                            <div>
+                                <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
+                                <label for="Pregunta4">Es la última versión del lenguaje en el que se escriben las páginas Webs.</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta4" name="Pregunta4" value="Correcto">
+                                <label for="Pregunta4">Es un servicio en el cual podemos mantener nuestros código seguros y tener control de versiones de estos.</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
+                                <label for="Pregunta4">Es la última evolución del lenguaje de las Hojas de Estilo en Cascada.</label>
+                            </div>
+                            <div class="RespuestaPregunta4"></div>
+                        </fieldset>
+
+                        <!--Pregunta 5 GITHUB-->
+                        <fieldset>
+                            <legend>
+                                   ¿Cuál de las siguientes afirmaciones es correcta respecto a GitHub?
+                            </legend>
+                            <div>
+                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
+                                <label for="Pregunta5">Con GitHub podemos publicar nuestro sitio web sin necesidad de pagar hosting o dominio.  
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
+                                <label for="Pregunta5">GitHub se implementa en las páginas y aplicaciones web para hacer animaciones.</label>
+                            </div>
+                            <div>
+                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Correcto">
+                                <label for="Pregunta5">Con GitHub se pueden utilizar repositorios de nuestros proyectos, los cuales podemos compartir con compañeros de trabajo.</label>
+                            </div>
+                            <div class="RespuestaPregunta5"></div>
                         </fieldset>
                         
                     </div>
