--- a/ActividadesHTML5.html
+++ b/ActividadesHTML5.html
@@ -69,9 +69,42 @@
                         </a>
                     </li>
                     <li>
-                        <a href="Actividades.html">
+                        <a href="">
                             Actividades
                         </a>
+                        <ul>
+                            <li>
+                                <a href="ActividadesCss3.html">
+                                    Actividad 1
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5.html">
+                                    Actividad 2
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5Num2.html">
+                                    Actividad 3
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="ActividadesGit.html">
+                                    Actividad 4
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHub.html">
+                                    Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="Autores.html">
@@ -98,26 +131,20 @@
                             <legend>¿Cuál de los siguientes usos del elemento script te parece el más apropiado?</legend>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
-                                <label for="Pregunta1">
-                                    <xmp>
-                                        <script src="archivo.js"></script>
-                                    </xmp>
+                                <label for="Pregunta1"> 
+                                    &lt;script src="archivo.js">&lt;/script>
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
                                 <label for="Pregunta1">
-                                    <xmp>
-                                        <script src="archivo.js" />
-                                    </xmp>
+                                     &lt;script src="archivo.js" />
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Correcto">
                                 <label for="Pregunta1">
-                                    <xmp>
-                                        <script type="text/javascript" src="archivo.js"></script>
-                                    </xmp>
+                                        &lt;script type="text/javascript" src="archivo.js">&lt;/script>
                                 </label>
                             </div>
                             <div class="RespuestaPregunta1"></div>
@@ -129,33 +156,25 @@
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
                                 <label for="Pregunta2">
-                                    <xmp>
-                                        <meter></meter>
-                                    </xmp>
+                                        &lt;meter>&lt;/meter>
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
                                 <label for="Pregunta2">
-                                    <xmp>
-                                        <hgroup></hgroup>
-                                    </xmp>
+                                        &lt;hgroup>&lt;/hgroup>
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
                                 <label for="Pregunta2">
-                                    <xmp>
-                                        <progress></progress>
-                                    </xmp>
+                                        &lt;progress>&lt;/progress>
                                 </label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Correcto">
                                 <label for="Pregunta2">
-                                    <xmp>
-                                        <post></post>
-                                    </xmp>
+                                        &lt;post>&lt;/post>
                                 </label>
                             </div>
                             <div class="RespuestaPregunta2"></div>
