--- a/ActividadesHTML5Num2.html
+++ b/ActividadesHTML5Num2.html
@@ -122,20 +122,20 @@
                 <div class="col-lg-12 row">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
-                            Sección de preguntas sobre GITHUB PAGES
+                            Sección dos de preguntas sobre HTML5
                         </h2>
                     </div>
                     <div class="col-lg-12">
                         <!--Pregunta 1 GITHUB Pages-->
                         <fieldset>
-                            <legend>¿Que es GitHub Pages?</legend>
+                            <legend>¿Que es HTML5?</legend>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
-                                <label for="Pregunta1">Es la última versión del lenguaje en el que se escriben las páginas Webs.</label>
+                                <label for="Pregunta1">Es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Correcto">
-                                <label for="Pregunta1">Es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales.</label>
+                                <label for="Pregunta1">Es la última versión del lenguaje en el que se escriben las páginas Webs.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta1" name="Pregunta1" value="Incorrecto">
@@ -146,18 +146,18 @@
 
                         <!--Pregunta 2 GITHUB Pages-->
                         <fieldset>
-                            <legend>GitHub Pages no es compatible con: </legend>
+                            <legend>¿Que puede hacer HTML5?</legend>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Correcto">
-                                <label for="Pregunta2">PHP, Ruby o Python</label>
+                                <label for="Pregunta2">Indica al navegador cuando un texto tiene un enlace y también la dirección URL a la que tiene que dirigirse si se hace click sobre el link.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
-                                <label for="Pregunta2">HTML5 y CCS3</label>
+                                <label for="Pregunta2">Almacena la información como una lista de cambios en los archivos.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta2" name="Pregunta2" value="Incorrecto">
-                                <label for="Pregunta2">Jekyll</label>
+                                <label for="Pregunta2">Realizar un control y un mantenimiento de las versiones de cuando se esta manejando un gran numero de archivos.</label>
                             </div>
                             <div class="RespuestaPregunta2"></div>
                         </fieldset>
@@ -165,38 +165,38 @@
                         <!--Pregunta 3 GITHUB Pages-->
                         <fieldset>
                             <legend>
-                                   ¿Cuál es una de las mayores limitantes de GitHub Pages?
+                                   ¿Cuál de las siguientes afirmaciones es correcta respecto a HTML5?
                             </legend>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
-                                <label for="Pregunta3">Solo se puede publicar páginas web con contenido educativo.</label>
+                                <label for="Pregunta3">HTML5 no es utilizado actualmente para el desarrollo de páginas web.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Incorrecto">
-                                <label for="Pregunta3">Los repositorios de origen de GitHub Pages tienen un límite recomendado de 70 MB.</label>
+                                <label for="Pregunta3">HTML5 nunca ha actualizado su estructura, quedando obsoleto por completo.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta3" name="Pregunta3" value="Correcto">
-                                <label for="Pregunta3">Los sitios de GitHub Pages publicados no pueden tener más de 1 GB.</label>
+                                <label for="Pregunta3">Durante el pasar del tiempo HTML5 ha tenido una evolución a nivel de su estructura.</label>
                             </div>
                             <div class="RespuestaPregunta3"></div>
                         </fieldset>
                         <!--Pregunta 4 GITHUB Pages-->
                         <fieldset>
                             <legend>
-                                   ¿En GitHub Pages se puede crear y publicar sitios web en línea usando?
+                                   ¿Cuál de las siguientes afirmaciones No es correcta respecto a HTML5?
                             </legend>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Correcto">
-                                <label for="Pregunta4">El selector de temas de Jekyll</label>
+                                <label for="Pregunta4">Durante el pasar del tiempo HTML5 ha decaido como lenguaje en el que se escriben las páginas Webs.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
-                                <label for="Pregunta4">PHP y Python.</label>
+                                <label for="Pregunta4">HTML5 es utilizado actualmente para el desarrollo de páginas web.</label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta4" name="Pregunta4" value="Incorrecto">
-                                <label for="Pregunta4">Ruby.</label>
+                                <label for="Pregunta4">HTML5 ha agregado nuevas etiquetas.</label>
                             </div>
                             <div class="RespuestaPregunta4"></div>
                         </fieldset>
@@ -204,19 +204,19 @@
                         <!--Pregunta 5 GITHUB Pages-->
                         <fieldset>
                             <legend>
-                                   ¿Cuál de las siguientes afirmaciones es correcta respecto a GitHub Page?
+                                   ¿Cuál es una de las nuevas etiquetas que agregado HTML5?
                             </legend>
                             <div>
+                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
+                                <label for="Pregunta5">  &lt;label>&lt;/label></label>
+                            </div>
+                            <div>
                                 <input type="radio" id="Pregunta5" name="Pregunta5" value="Correcto">
-                                <label for="Pregunta5">Con GitHub Pages podemos publicar nuestro sitio web sin necesidad de pagar hosting o dominio.</label>
+                                <label for="Pregunta5">  &lt;article>&lt;/article></label>
                             </div>
                             <div>
                                 <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
-                                <label for="Pregunta5">GitHub Pages se implementa en las páginas y aplicaciones web para hacer animaciones.</label>
-                            </div>
-                            <div>
-                                <input type="radio" id="Pregunta5" name="Pregunta5" value="Incorrecto">
-                                <label for="Pregunta5">GitHub Pages ninguna persona puede visitar el repositorio publicado, si no tiene una cuenta GitHub.</label>
+                                <label for="Pregunta5">  &lt;img>&lt;/img></label>
                             </div>
                             <div class="RespuestaPregunta5"></div>
                         </fieldset>
