--- a/GITPages.html
+++ b/GITPages.html
@@ -67,9 +67,42 @@
                             </a>
                         </li>
                         <li>
-                            <a href="Actividades.html">
-                                Actividades
+                            <a href="">
+                            Actividades
                             </a>
+                           <ul>
+                            <li>
+                                <a href="ActividadesCss3.html">
+                                    Actividad 1
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5.html">
+                                    Actividad 2
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5Num2.html">
+                                    Actividad 3
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="ActividadesGit.html">
+                                    Actividad 4
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHub.html">
+                                    Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
+                                </a>
+                            </li>
+                        </ul>
                         </li>
                         <li>
                             <a href="Autores.html">
