--- a/HTML5.html
+++ b/HTML5.html
@@ -84,13 +84,24 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="ActividadesHTML5.html">
+                                <a href="ActividadesHTML5Num2.html">
                                     Actividad 3
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="ActividadesGit.html">
+                                    Actividad 4
                                 </a>
                             </li>
                             <li>
                                 <a href="ActividadesGitHub.html">
-                                    Actividad 4
+                                    Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
                                 </a>
                             </li>
                         </ul>
