--- a/Multimedia.html
+++ b/Multimedia.html
@@ -67,10 +67,43 @@
                             </a>
                         </li>
                         <li>
-                            <a href="Actividades.html">
-                                Actividades
-                            </a>
-                        </li>
+                        <a href="">
+                            Actividades
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="ActividadesCss3.html">
+                                    Actividad 1
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5.html">
+                                    Actividad 2
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesHTML5Num2.html">
+                                    Actividad 3
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="ActividadesGit.html">
+                                    Actividad 4
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHub.html">
+                                    Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                         <li>
                             <a href="Autores.html">
                                 Autores
@@ -139,6 +172,26 @@
                     <div class="col-lg-12">
                         <div class="Encabezado col-lg-12 ">
                             <h2>
+                                Juego Interactivo
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <center><iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/255960991/?autostart=false" frameborder="0" allowfullscreen></iframe></center> 
+                        <h6>INSTRUCCIONES DE JUEGO:</h6>
+                         <p> 
+                         	Bienvenido, las instrucciones son las siguientes presionar en el botón Start  para iniciar, en cuanto se realice la pregunta se activa una caja de texto donde debe escribir la letra (A, B, C, D) dependiendo de la respuesta correcta.
+                            Para cruzar la quinta puerta y poder ganar el juego debe tener más de 2 puntos.
+                        </p>  
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-12 row subcontainer">
+                <div class="col-lg-12 row">
+                    <div class="col-lg-12">
+                        <div class="Encabezado col-lg-12 ">
+                            <h2>
                                 Audios
                             </h2>
                         </div>
@@ -147,6 +200,7 @@
                         <audio alt="Third slide" autoplay="" class="d-block w-100" controls="" loop="" src="Audios/GrabacionAudioTemas.m4a">
                         </audio>
                     </div>
+
                 </div>
             </div>
         </div>
