--- a/index.html
+++ b/index.html
@@ -84,18 +84,24 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="ActividadesGit.html">
+                                <a href="ActividadesHTML5Num2.html">
                                     Actividad 3
                                 </a>
                             </li>
+
                             <li>
-                                <a href="ActividadesGitHub.html">
+                                <a href="ActividadesGit.html">
                                     Actividad 4
                                 </a>
                             </li>
                             <li>
-                                <a href="ActividadesGitHubPages.html">
+                                <a href="ActividadesGitHub.html">
                                     Actividad 5
+                                </a>
+                            </li>
+                            <li>
+                                <a href="ActividadesGitHubPages.html">
+                                    Actividad 6
                                 </a>
                             </li>
                         </ul>
@@ -201,7 +207,14 @@
             To Top
         </a>
         <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
+        <div class="Contador">
+        	 <h6 class="text-uppercase mb-4 font-weight-bold">
+                Visitas
+            </h6>
+        	<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=44593213&digit=style/plain/1/&reloads=0"></a>
+        </div>
         <div class="footerRedes">
+
             <h6 class="text-uppercase mb-4 font-weight-bold">
                 Redes
             </h6>
